dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/pGuide.cxx)
AM_INIT_AUTOMAKE(pguide, 0.0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL

plib_suffix="-lplibpu -lplibfnt -lplibsg -lplibul"

AC_LANG_CPLUSPLUS

dnl Checks for library functions.
dnl check for OpenGL related libraries

AC_CANONICAL_HOST

case "${host}" in
*-*-cygwin* | *-*-mingw32*)
  dnl CygWin under Windoze.

  dnl OpenGL libraries
  LIBS="$plib_suffix $LIBS -lwinmm -lglut32 -lglu32 -lopengl32 -luser32 -lgdi32"
	;;
*)
    dnl Check for X11

    AC_PATH_XTRA

    x_suffix="$X_LIBS $X_PRE_LIBS -lX11 -lXi -lXext -lXmu $X_EXTRA_LIBS -lm"

dnl =========================================================
dnl    if test "x$x_includes" != "x"; then
dnl       CPPFLAGS="$CPPFLAGS -I$x_includes"
dnl    fi
dnl =========================================================

    dnl Reasonable stuff non-windoze variants ... :-)

    AC_CHECK_LIB(dl, dlclose)

    AC_CHECK_LIB(GL, glNewList,,,$x_suffix)
    if test "x$ac_cv_lib_GL_glNewList" = "xno" ; then
        dnl if no GL, check for MesaGL
        AC_CHECK_LIB(MesaGL, glNewList,,,$x_suffix)
    fi

dnl dnl if using mesa, check for xmesa.h
dnl if test "x$ac_cv_lib_MesaGL_glNewList" = "xyes" ; then
dnl     AC_CHECK_HEADER(GL/xmesa.h)
dnl     AM_CONDITIONAL(ENABLE_XMESA_FX, \
dnl                    test "x$ac_cv_header_GL_xmesa_h" = "xyes")
dnl else
dnl     dnl force a failed check
dnl     AM_CONDITIONAL(ENABLE_XMESA_FX, test "no" = "yes")
dnl fi

    AC_CHECK_LIB(GLU, gluLookAt,,,$x_suffix)
    if test "x$ac_cv_lib_GLU_gluLookAt" = "xno" ; then
        dnl if no GLU, check for MesaGLU
        AC_CHECK_LIB(MesaGLU, gluLookAt,,,$x_suffix)
    fi

    opengl_LIBS="$LIBS $x_suffix"

    dnl check for glut...or freeglut
    AC_CHECK_LIB(freeglut, glutGetModifiers,,,$opengl_LIBS)
    if test "x$ac_cv_lib_freeglut_glutGetModifiers" = "xno" ; then
        dnl if no freeglut, check for Real GLUT
        AC_CHECK_LIB(glut, glutGetModifiers,,,$opengl_LIBS)
    fi

    CFLAGS="$CFLAGS -Wall -I/usr/local/include -L/usr/local/lib"
    CXXFLAGS="$CXXFLAGS -Wall -I/usr/local/include -L/usr/local/lib"

	LIBS="$plib_suffix $LIBS $x_suffix"
	;;
esac

dnl Checks for header files.

AC_HEADER_STDC

AC_CHECK_HEADERS(GL/gl.h GL/glut.h)
AC_CHECK_HEADER(windows.h, AC_DEFINE(WIN32))

AC_OUTPUT( Makefile         \
           src/Makefile     \
          )

