lib_LIBRARIES = libplibssg.a

include_HEADERS = ssg.h ssgKeyFlier.h

libplibssg_a_SOURCES = ssg.cxx ssgAnimation.cxx ssgBase.cxx \
	ssgBaseTransform.cxx ssgBranch.cxx ssgContext.cxx ssgCutout.cxx \
	ssgDList.cxx ssgEntity.cxx ssgIsect.cxx ssgLeaf.cxx ssgList.cxx \
	ssgLoadAC.cxx ssgLocal.h ssgOptimiser.cxx ssgRoot.cxx ssgSaveAC.cxx \
	ssgSelector.cxx ssgSimpleState.cxx ssgState.cxx ssgStateTables.cxx \
	ssgStats.cxx  ssgTexTrans.cxx ssgTexture.cxx ssgTransform.cxx \
	ssgStateSelector.cxx ssgRangeSelector.cxx ssgImageLoader.cxx \
        ssgInvisible.cxx ssgLoadSSG.cxx ssgLoadVRML.cxx ssgVTable.cxx \
        ssgSimpleList.cxx ssgVtxTable.cxx ssgIO.cxx ssgLoad3ds.cxx \
        ssgSaveASE.cxx ssgLoadASE.cxx ssgParser.cxx ssgParser.h \
        ssgLoadDXF.cxx ssgSaveDXF.cxx ssgLoadTRI.cxx ssgSaveTRI.cxx \
        ssgLoadOBJ.cxx ssgSaveOBJ.cxx ssgVtxArray.cxx ssgLoadMD2.cxx \
	ssgLoadMDL.cxx

INCLUDES += -I$(top_srcdir)/src/sg
INCLUDES += -I$(top_srcdir)/src/util

EXTRA_DIST = ssg.dsp libssg.bpr

